<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a_name">Team A</string>
    <string name="team_b_name">Team B</string>
    <string name="init_value">0</string>
    <string name="goal_text">Goal!!!</string>
    <string name="yellow_card_text">Yellow card</string>
    <string name="red_card_text">Red card</string>
    <string name="reset">Reset scores</string>
    <string name="background_description">Background</string>
</resources>
