<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/background3" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:alpha="0.5"
        android:background="@drawable/background_layers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/team_a_title_layers"
                    android:gravity="end"
                    android:padding="8dp"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="5"
                    android:text="@string/team_a_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_a_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/score_layers"
                    android:padding="16dp"
                    android:shadowColor="@android:color/darker_gray"
                    android:shadowDx="8"
                    android:shadowDy="8"
                    android:shadowRadius="5"
                    android:text="@string/init_value"
                    android:textColor="@android:color/black"
                    android:textSize="48sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_a_yellow_cards"
                    style="@style/teamACards"
                    android:background="@drawable/yellow_card_layers"
                    android:text="@string/init_value"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/team_a_red_cards"
                    style="@style/teamACards"
                    android:background="@drawable/red_card_layers"
                    android:text="@string/init_value"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/goalTeamAButton"
                style="@style/scoreButton"
                android:text="@string/goal_text" />

            <Button
                android:id="@+id/yellowCardTeamAButton"
                style="@style/scoreButton"
                android:text="@string/yellow_card_text" />

            <Button
                android:id="@+id/redCardTeamAButton"
                style="@style/scoreButton"
                android:text="@string/red_card_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/score_layers"
                    android:padding="16dp"
                    android:shadowColor="@android:color/darker_gray"
                    android:shadowDx="8"
                    android:shadowDy="8"
                    android:shadowRadius="5"
                    android:text="@string/init_value"
                    android:textColor="@android:color/black"
                    android:textSize="48sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/team_b_title_layers"
                    android:gravity="start"
                    android:padding="8dp"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="5"
                    android:text="@string/team_b_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_yellow_cards"
                    style="@style/teamBCards"
                    android:background="@drawable/yellow_card_layers"
                    android:text="@string/init_value" />

                <TextView
                    android:id="@+id/team_b_red_cards"
                    style="@style/teamBCards"
                    android:background="@drawable/red_card_layers"
                    android:text="@string/init_value" />
            </LinearLayout>

            <Button
                android:id="@+id/goalTeamBButton"
                style="@style/scoreButton"
                android:text="@string/goal_text" />

            <Button
                android:id="@+id/yellowCardTeamBButton"
                style="@style/scoreButton"
                android:text="@string/yellow_card_text" />

            <Button
                android:id="@+id/redCardTeamBButton"
                style="@style/scoreButton"
                android:text="@string/red_card_text" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/reset_bar_layers">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:text="@string/reset" />

    </RelativeLayout>

</RelativeLayout>
